--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -6,8 +6,7 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
-  justify-items: center;
+  grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
   gap: 20px;
 }
 
