--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -6,7 +6,8 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+  justify-items: center;
   gap: 20px;
 }
 
